--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
 				<a class="arrow scrollto" href="#chiffres"></a>
 			</div>
   	</div>
-	<main>
 		<section class="chiffres" id="chiffres">
 			<h3>CHIFFRES CLES*</h3>
 			<div class="chiffres_figure">
@@ -75,6 +74,7 @@
 				<div class="clear"></div>
 			</div>
 		</section>
+	<main>
 		<section class="contenu_principal" id="contenu_principal">
 			<div class="contenu">
 				<nav>
@@ -94,6 +94,7 @@
 					</ul>
 				</nav>
 				<div class="clear"></div>
+				</div>
 				<div class="environnement">
 					<div class="element couleur_environnement">
 						<div class="description">
@@ -498,7 +499,7 @@ naturel</strong></h6>
 						</div>
 					</div>
 					<div class="element_vertical">
-						<div class="element couleur_element clear full_width_height">
+						<div class="element couleur_element clear">
 							<div class="description">
 								<h5 class="typo_couleur_legislation">Octobre 2016</h5>
 								<h6><strong>Compensation agricole : la profession demande l’annulation du décret
@@ -507,7 +508,7 @@ naturel</strong></h6>
 								<a class="couleur_legislation" href="">En savoir plus</a>
 							</div>
 						</div>
-						<div class="element clear none">
+						<div class="element clear">
 							<img src="media/15.jpg" alt="">
 						</div>
 					</div>
@@ -578,15 +579,15 @@ naturel</strong></h6>
 						</div>
 					</div>
 					<div class="element_vertical">
-						<div class="element couleur_element full_width clear">
+						<div class="element couleur_element">
 							<div class="description">
 								<h6><strong>Silice cristalline : les indicateurs clés de performance sont stables ou en amélioration continue</strong></h6>
 		<p>Les 16 signataires de NEPSI publient leur 5e rapport sur l’application de l’accord européen sur la protection de la santé des travailleurs par l’observation de bonnes pratiques dans le cadre de la manipulation et de l’utilisation de la silice cristalline et des produits qui en contiennent. Par rapport à 2014, et sur une période plus longue depuis 2008, tous les indicateurs clés de performance sont stables ou en amélioration. </p>
 								<a class="couleur_sante" href="">En savoir plus</a>
 							</div>
 						</div>
-						<div class="element couleur_element2 full_width">
-							<div class="description padding_top">
+						<div class="element couleur_element2">
+							<div class="description">
 								<h5 class="typo_couleur_sante">21 mars 2017</h5>
 								<h6><strong>Silice cristalline alvéolaire :  l’UNPG rencontre la Représentation Permanente de la France auprès  de l’Union européenne</strong></h6>
 		<p>Dans la perspective d’un trilogue sur la révision de la directive CMD, auquel participeront des représentants du Parlement européen, du Conseil de l’Europe et de la Commission européenne, l’UNPG rencontre la Représentation Permanente de la France auprès de l’Union européenne pour obtenir une position forte du Conseil et de la Commission, et garantir une VLEP 0,1 mg/m³.</p>
@@ -1088,10 +1089,9 @@ naturel</strong></h6>
 					<div class="clear"></div>
 				</div>
 
-			</div>
 			<div class="image_granulats"></div>
-		</section>
 	</main>
+	</section>
 	<footer>
 		<div class="footer_haut">
 			<div class="infos">
@@ -1126,6 +1126,7 @@ naturel</strong></h6>
 			</div>
 		</div>
 	</footer>
+
 </div>
 </div>
 
