footer en cours
footer en cours

--- a/index.html
+++ b/index.html
@@ -1102,15 +1102,19 @@ naturel</strong></h6>
 			</div>
 		</div>
 		<div class="footer_bas">
-			<div class="copyright">
-				<p>&copy; copyright 2016. COX DIGITAL</p>
-				<ul>
-					<li><a href="#">SITE MAP</a></li>
-					<li><a href="#">CONDITIONS GENERALES</a></li>
-					<li><a href="#">INFORMATIONS LEGALES</a></li>
-					<li><a href="#">CREDITS</a></li>
-				</ul>
-				<a href="#accueil" class="button scrollto"><img src="img/back-to-top-button.png" alt="back-to-top-button"></a>
+			<div class="infos_bas">
+				<div class="copyright">
+					<p>&copy; copyright 2016. COX DIGITAL</p>
+				</div>
+				<div class="mentions">
+					<ul>
+						<li><a href="#">SITE MAP</a></li>
+						<li><a href="#">CONDITIONS GENERALES</a></li>
+						<li><a href="#">INFORMATIONS LEGALES</a></li>
+						<li><a href="#">CREDITS</a></li>
+					</ul>
+					<a href="#accueil" class="button scrollto"><img src="img/back-to-top-button.png" alt="back-to-top-button"></a>
+				</div>
 				<div class="clear"></div>
 			</div>
 		</div>
