--- a/index.html
+++ b/index.html
@@ -1102,20 +1102,22 @@ naturel</strong></h6>
 			</div>
 		</div>
 		<div class="footer_bas">
-			<div class="infos_bas">
-				<div class="copyright">
-					<p>&copy; copyright 2016. COX DIGITAL</p>
+			<div class="infos">
+				<div class="infos_bas">
+					<div class="copyright">
+						<p>&copy; copyright 2016. COX DIGITAL</p>
+					</div>
+					<div class="mentions">
+						<ul>
+							<li><a href="Javascript:void(0);">SITE MAP</a></li>
+							<li><a href="Javascript:void(0);">CONDITIONS GENERALES</a></li>
+							<li><a href="Javascript:void(0);">INFORMATIONS LEGALES</a></li>
+							<li><a href="Javascript:void(0);">CREDITS</a></li>
+						</ul>
+						<a href="#accueil" class="button scrollto"><img src="img/back-to-top-button.png" alt="back-to-top-button"></a>
+					</div>
+					<div class="clear"></div>
 				</div>
-				<div class="mentions">
-					<ul>
-						<li><a href="#">SITE MAP</a></li>
-						<li><a href="#">CONDITIONS GENERALES</a></li>
-						<li><a href="#">INFORMATIONS LEGALES</a></li>
-						<li><a href="#">CREDITS</a></li>
-					</ul>
-					<a href="#accueil" class="button scrollto"><img src="img/back-to-top-button.png" alt="back-to-top-button"></a>
-				</div>
-				<div class="clear"></div>
 			</div>
 		</div>
 	</footer>
